# dft

./: .clang-format  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONVERSATION_CHANGELOG.md  Cmesh.vtu  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  REORGANIZATION_PLAN.md  SPECTRAL_DFT_GUIDE.md  STYLE  compile_commands.json
data/: C.GGA_PBE-JTH.xml  C.POSCAR
src/: Atom.h  CMakeLists.txt  DFTMesh.cpp  DFTMesh.h  FEspace.cpp  FEspace.h  PAW.cpp  PAW.h  Structure.h  atom.h  base.hpp  constants.h  dftmesh.cpp  dftmesh.h  eigenvalueSolver.hpp  fespace.cpp  fespace.h  hamiltonianMatrix.hpp  kinetic.cpp  kinetic.hpp  kineticOperator.cpp  kineticOperator.hpp  kinetic_operator.cpp  kinetic_operator.hpp  local_pch.hpp  paw.cpp  pawBasisEvaluator.cpp  pawBasisEvaluator.hpp  pawNonlocalFixedOperator.cpp  pawNonlocalFixedOperator.hpp  paw_basis_evaluator.cpp  paw_basis_evaluator.hpp  paw_nonlocal_fixed_operator.cpp  paw_nonlocal_fixed_operator.hpp  pch.hpp  periodicKDTree.cpp  periodicKDTree.hpp  periodic_kd_tree.cpp  periodic_kd_tree.hpp  pkdtree.cpp  (+12 more)
src/ndarray/: .clang-format  .clangd  CMakeLists.txt  ndarray.hpp  ndarray_instantiations.cpp  test.cpp  test_ndarray.cpp
src/paw/: coulomb_correction.cpp  coulomb_correction.hpp  grid_map.cpp  grid_map.hpp  ham_correction.cpp  ham_correction.hpp  interpolator.cpp  interpolator.hpp  kinetic_diff.cpp  kinetic_diff.hpp  paw.cpp  paw.hpp  paw_basis_evaluator.cpp  paw_basis_evaluator.hpp  paw_nonlocal_fixed_operator.cpp  paw_nonlocal_fixed_operator.hpp  paw_setup.cpp  paw_setup.hpp  projector.cpp  projector.hpp  radial_interpolator.cpp  radial_interpolator.hpp  spherical_harmonics.cpp  spherical_harmonics.hpp
test/: CMakeLists.txt  TestDFTMesh.cpp  TestKinetic.cpp  TestNdarray.cpp  TestNdarrayFeatureMacro.cpp  TestOverlap.cpp  TestPAW.cpp  TestPAWBasisEvaluator.cpp  TestPAWNonlocalFixed.cpp  TestPeriodicKDTree.cpp  TestRadialInterpolator.cpp  TestReadPoscar.cpp  TestSphericalHarmonics.cpp  test_lda.cpp  test_spectral_dft.cpp
